--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "registry" : "http://16.171.0.238:8081/repository/nodejs-proj/"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sonar" : "node sonar-project.js"
   },
   "keywords": [
     "angular",
