--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Integrate Angular 10 with Node.js Restful Services example",
   "main": "server.js",
   "publishConfig" : {
-    "registry" : "http://16.171.0.238:8081/repository/nodejs-proj/"
+    "registry" : "http://16.170.234.56:8081/repository/mahesh/"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
